--- a/src/styles/amazon.module.css
+++ b/src/styles/amazon.module.css
@@ -11,3 +11,15 @@
     padding:5px;
     border-radius: 5px;
 }
+
+/* section {
+    width:80%;
+    margin:auto;
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 70vw;
+    justify-content: center;
+    gap: 3rem;
+} */
