--- a/src/styles/cards.module.css
+++ b/src/styles/cards.module.css
@@ -2,9 +2,7 @@ section {
     width:80%;
     margin:auto;
     margin-top: 5%;
-    /* display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: auto; */
+   
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -17,10 +15,8 @@ section {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    /* width: 250px; */
     width: 15vw;
     padding:1.5rem;
-    /* background-color: aquamarine; */
     background-color: white;
    
 
@@ -32,10 +28,7 @@ section {
     cursor: pointer;
 }
 
-.image_box img {
-    /* width:150px;
-    height:200px; */
-    /* border: 2px solid black; */
+.imageBox img {
     width: 15vw;
     height: 15vw;
    
@@ -45,7 +38,6 @@ img {
     width: 100%;
     height: 100%;
    
-    /* width:12%; */
 }
 
 .details {
@@ -78,7 +70,6 @@ img {
     padding: 5px 10px;
     border: none;
     font-weight: bold;
-    /* background-color: skyblue; */
     background-color: #19376D;
     outline: none;
     border-radius: 2px;
@@ -90,16 +81,14 @@ img {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        /* width: 250px; */
         width: 50vw;
         padding:1.5rem;
-        /* background-color: aquamarine; */
         background-color: white;
        
     
     }
 
-    .image_box {
+    .imageBox {
         justify-content: center;
         align-items: center;
         display: flex;
@@ -112,16 +101,14 @@ img {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        /* width: 250px; */
         width: 25vw;
         justify-content: center;
         padding:1.5rem;
-        /* background-color: aquamarine; */
         background-color: white;
        
     
     }
-     .image_box {
+     .imageBox {
         justify-content: center;
         align-items: center;
         display: flex;
@@ -134,15 +121,13 @@ img {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        /* width: 250px; */
         width: 18vw;
         padding:1.5rem;
-        /* background-color: aquamarine; */
         background-color: white;
        
     
     }
-    .image_box {
+    .imageBox {
         justify-content: center;
         align-items: center;
         display: flex;
