--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,4 +1,37 @@
 /*  */
+
+.loginForm {
+  height:50vh;
+  width:50vw;
+  margin: 0 auto;
+  padding: 3rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  background-color: aqua;
+  padding-right:3.5rem;
+}
+
+.loginForm h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.login{
+  width: 5rem;
+}
+
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+  
+  
+
+}
   
   .inputGroup {
     display: flex;
@@ -52,41 +85,7 @@
 
 
 
-.loginForm {
-    /* max-width: 800px; */
-    height:50vh;
-    width:50vw;
-    /* margin-top: 5rem; */
-    margin: 0 auto;
-    padding: 40px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    /* box-shadow: 0px 0px 5px #ccc; */
-    /* height:90vh; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    background-color: aqua;
-  }
-  
-  .loginForm h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
 
-  .login{
-    width: 5rem;
-  }
-
-  .loginContainer {
-    display: flex;
-    flex-direction: column;
-    
-    
-
-  }
 
   label {
     font-size: large;
