--- a/src/styles/register.module.css
+++ b/src/styles/register.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     width:100%;
   }
   
@@ -19,7 +19,7 @@
     border-radius: 10px;
   }
   
-  .form-group {
+  .formGroup {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -27,7 +27,7 @@
     font-size: 1.5rem;
   }
   
-  .form-group label {
+  .formGroup label {
     margin-bottom: 5px;
   }
   
@@ -36,7 +36,7 @@
     width: 20vw
   }
   
-  .register-button {
+  .registerButton {
     padding: 0.5rem 2rem;
     margin: 1rem;
     font-size: 1.5rem;
@@ -45,4 +45,40 @@
   .register {
     color: blueviolet;
     font-size: 2rem;
+  }
+
+  @media only screen and (min-width:320px){
+
+    .form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 80vw;
+      padding: 20px;
+      background-color: #eee;
+      border-radius: 10px;
+    }
+
+    .content {
+      width:50vw;
+    }
+
+  }
+
+  @media only screen and (min-width:1024px) {
+    .form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 30vw;
+      padding: 20px;
+      background-color: #eee;
+      border-radius: 10px;
+    }
+
+    .content {
+      padding: 0.5rem;
+      width: 20vw
+    }
+
   }
