--- a/src/styles/register.module.css
+++ b/src/styles/register.module.css
@@ -15,7 +15,7 @@
     align-items: center;
     width: 30vw;
     padding: 20px;
-    background-color: #eee;
+    background-color: #B9EDDD;
     border-radius: 10px;
   }
   
@@ -40,11 +40,21 @@
     padding: 0.5rem 2rem;
     margin: 1rem;
     font-size: 1.5rem;
+    background-color: #19376D;
+    color:white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
   
   .register {
-    color: blueviolet;
+    color: #19376D;
     font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .value {
+    color:red;
   }
 
   @media only screen and (min-width:320px){
@@ -55,7 +65,7 @@
       align-items: center;
       width: 80vw;
       padding: 20px;
-      background-color: #eee;
+      background-color: #B9EDDD;
       border-radius: 10px;
     }
 
@@ -72,7 +82,7 @@
       align-items: center;
       width: 30vw;
       padding: 20px;
-      background-color: #eee;
+      background-color: #B9EDDD;
       border-radius: 10px;
     }
 
