--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -2,7 +2,7 @@
 
 .loginForm {
   height:50vh;
-  width:50vw;
+  width:30vw;
   margin: 0 auto;
   padding: 3rem;
   border: 1px solid #ccc;
@@ -28,6 +28,7 @@
 .loginContainer {
   display: flex;
   flex-direction: column;
+  margin-top:4rem;
   
   
 
@@ -100,6 +101,21 @@
     font-size: large;
     font-weight: bold;
     margin-bottom: .5rem;
+  }
+
+
+  @media only screen and (min-width:320px){
+
+    .loginForm{
+      width:50vw;
+    }
+
+  }
+
+  @media only screen and (min-width:1024px){
+    .loginForm{
+      width:30vw;
+    }
   }
  
   
